# npv-build

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  IMPROVEMENT_REPORT.md  MANIFEST.in  NPV_Creation_Guide.md  README.md  SPEC-clothing.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
app_verify/: my_v_eb9c217f.app.json
docs/: STATUS.md  npv-clothing-research.md  npv-facial-animation-setup.md  release-qa.md  spec-save-parser-and-part-resolution.md
docs/adr/: 0001-archivexl-vs-donor-injection.md  0001-mapping-tables-vendored-and-patch-pinned.md  0002-no-blender-in-v1.md  0003-templates-uncooked-on-user-machine.md  0004-inline-component-injection-via-wolvenkit-libraries.md
docs/legacy/: SPEC-app-v2.md  SPEC-inject.md  SPEC.md  Technical Implementation Specification_ Cyberpunk 2077 NPV Automation.md
docs/research/: 2026-07-17-archivexl-spike-notes.md
docs/specs/: byo-head-mesh.md
external_v_01_mod/: asset_paths.json  cc_settings.json  npv_components.json
issues/: 01-basic-e2e-scaffolding.md  02-save-parser-integration.md  03-mapping-and-asset-resolution.md  04-wolvenkit-automation.md  05-config-editor-and-packing.md
my_v_mod/: asset_paths.json  cc_settings.json  npv_components.json
npv_build/: blender_module.py  cli.py  clothing.py  config.py  config_editor.py  gen_mapping.py  gui.py  gui_backend.py  gui_theme.py  hair_mod_helper.py  head_bake.py  installer.py  mapping.py  orchestrator.py  part_resolver.py  project_writer.py  save_format.py  save_parser.py  save_probe.py  wk_cli.py  wolvenkit.py
npv_build/core/: app_inject.py  cancel.py  checksums.py  errors.py  logging_setup.py  multi_appearance.py  packaging.py  pipeline.py  platform.py  proc.py  safe_extract.py  toolpaths.py
npv_build/data/: fallback_outfit.json  save_versions.json
npv_build/gui_logic/: discovery.py  modmanager.py  settings.py  wizard.py
npv_build/gui_views/: build_view.py  wizard_view.py  (+3 more)
packaging/: AppRun  build_appimage.sh  entry.py  npv-build.desktop  npv-build.spec
release_test/: asset_paths.json  cc_settings.json
scripts/: t7_probe_new_save.py
test_v_mod/: asset_paths.json  cc_settings.json
tests/: conftest.py  test_build_project.py  test_byo_head.py  test_clothing.py  test_config_editor_template.py  test_config_isolation.py  test_gui_backend.py  test_hair_mod_helper.py  test_head_bake.py  test_installer.py  test_mapping.py  test_orchestrator.py  test_packaging_entry.py  test_project_writer.py  test_save_parser.py  test_version.py  test_wk_cli.py
(+71 files in other folders)
