[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "npv-build"
version = "2.0.0.dev0"
description = "Cyberpunk 2077 NPV Automation"
authors = [
    {name = "Maintainer"}
]
requires-python = ">=3.11"
dependencies = [
    "tomli-w",
    "lz4"
]

[project.optional-dependencies]
gui = [
    "customtkinter>=6.0.0",
    "tkinterdnd2>=0.5.0",
    "py7zr>=0.20.0"
]

[project.scripts]
npv-build = "npv_build.cli:main"

[project.gui-scripts]
npv-build-gui = "npv_build.gui:main"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["npv_build"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "WolvenKit",
    "my_v_mod",
    "external_v_01_mod",
    "test_v_mod",
    "release_test",
    "app_verify",
    "trial_out",
    "latest_v_mod",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "BLE"]
ignore = ["E501"]
